# __core__

./: .gitignore  README.md  dev_setup.sh  linux_dev_setup.sh  mac_dev_setup.sh  pyproject.toml  setup.py  start-core.sh  start-mycroft.sh  stop-core.sh  venv-activate.sh
core/: __init__.py
core/api/: __init__.py  __main__.py  config.py
core/api/auth/: bearer.py  handlers.py
core/api/common/: utils.py
core/api/handlers/: voice.py
core/api/models/: voice.py
core/api/routers/: voice.py
core/audio/: __init__.py  __main__.py  audioservice.py  speech.py  utils.py
core/audio/services/: __init__.py
core/client/enclosure/: __main__.py  base.py
core/client/speech/: __main__.py  hotword_factory.py  listener.py  mic.py
core/client/text/: __main__.py  gui_server.py  text_client.py
core/client/voice/: __main__.py  hotword_factory.py  listener.py  mic.py  silence.py
core/client/web/: __main__.py  web_client.py
core/configuration/: __init__.py  config.py  core.conf  locale.py  locations.py  mycroft.conf
core/dialog/: dialog.py
core/enclosure/: api.py  display_manager.py  gui.py
core/filesystem/: __init__.py
core/identity/: __init__.py
core/intent_services/: __init__.py  adapt_service.py  fallback_service.py  padatious_service.py  qa_service.py
core/llm/: __init__.py  llm.py  output_parser.py  prompt_template.py  system_message.py
core/lock/: __init__.py
core/messagebus/: __init__.py  load_config.py  message.py  send_func.py
core/messagebus/client/: client.py
core/messagebus/service/: __main__.py  event_handler.py
core/metrics/: __init__.py
core/session/: __init__.py
core/skills/: __init__.py  __main__.py  api.py  audioservice.py  common_event_skill.py  common_iot_skill.py  common_play_skill.py  common_query_skill.py  core.py  event_scheduler.py  fallback_skill.py  intent_service.py  msm_wrapper.py  settings.py  skill_data.py  skill_loader.py  skill_manager.py  skill_updater.py
core/skills/intent_services/: adapt_service.py  fallback_service.py  padatious_service.py
core/skills/mycroft_skill/: mycroft_skill.py
core/skills/skill/: decorators.py  event_container.py  skill.py
core/stt/: __init__.py  base.py  whisper.py
core/tts/: bing_tts.py  cache.py  cache_handler.py  dummy_tts.py  elevenlabs_tts.py  google_tts.py  ibm_tts.py  mimic2_tts.py  mimic3_tts.py  mimic_tts.py  mozilla_tts.py  openai_tts.py  polly_tts.py  remote_tts.py  tts.py  yandex_tts.py
core/ui/: tailwind.config.js
core/ui/backend/: __main__.py  config.py
core/ui/src/: app.css  tailwind.css
core/util/: __init__.py  audio_test.py  audio_utils.py  file_utils.py  intent_service_interface.py  log.py  metrics.py  monotonic_event.py  network_utils.py  parse.py  platform.py  process_utils.py  resource_files.py  signal.py  time.py
core/version/: __init__.py
mycroft/client/enclosure/: __main__.py
mycroft/client/speech/: __main__.py  hotword_factory.py  listener.py  mic.py
mycroft/configuration/: config.py  locations.py  mycroft.conf
mycroft/enclosure/: api.py  display_manager.py
mycroft/metrics/: __init__.py
mycroft/skills/: intent_service.py  skill_updater.py
mycroft/stt/: __init__.py
mycroft/tts/: tts.py
mycroft/util/: __init__.py  metrics.py  platform.py  process_utils.py
requirements/: requirements.txt  tests.txt
scripts/: dev.sh  prepare-msm.sh
source/: __init__.py
source/api/: __init__.py
source/audio/: __main__.py  speech.py  utils.py
source/client/listener/: __main__.py  hotword_factory.py  mic.py  silence.py
source/client/text/: __main__.py  text_client.py
source/client/voice/: listener.py
source/client/web/: __main__.py  web_client.py
source/configuration/: __init__.py  config.py  core.conf  locations.py
source/core/: __main__.py  api.py  event_scheduler.py  fallback_skill.py  msm_wrapper.py  settings.py  skill_data.py  skill_loader.py  skill_manager.py
source/core/skill/: __init__.py  event_container.py  skill.py
source/dialog/: dialog.py
source/filesystem/: __init__.py
source/intent_services/: __init__.py  adapt_service.py  fallback_service.py  padatious_service.py  qa_service.py
source/llm/: llm.py  system_message.py
source/lock/: __init__.py
source/messagebus/: load_config.py  message.py  send_func.py
source/messagebus/client/: client.py
source/messagebus/service/: __main__.py  event_handler.py
source/stt/: __init__.py  base.py  whisper.py
source/tts/: cache.py  elevenlabs_tts.py  mimic3_tts.py  openai_tts.py  tts.py
source/ui/backend/: __main__.py  config.py  (+1 more)
source/util/: __init__.py  audio_test.py  audio_utils.py  file_utils.py  format.py  intent_service_interface.py  log.py  monotonic_event.py  network_utils.py  parse.py  process_utils.py  resource_files.py  signal.py  time.py
source/version/: __init__.py
test/unittests/: base.py  mocks.py
test/wake_word/: wake_word_test.py
(+112 files in other folders)
