[tool.commitizen]
# name = "cz_customize"
version = "4.0.0"
version_files = [
    "setup.py","core/version/__init__.py"
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"

[pycodestyle]
max-line-length = 88

[tool.poetry]
name = "core"
version = "4.0.0"
description = "ai assistant"
authors = ["victor <vfranktor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "2.26.0"
watchdog = "3.0.0"
pyaudio = "0.2.13"
pyee = "8.1.0"
speechrecognition = "3.10.0"
tornado = ">=6.1"
websocket-client = ">=1.2.1"
requests-futures = "0.9.5"
pyserial = "3.0"
psutil = "5.6.6"
pillow = "8.3.2"
python-dateutil = "2.6.0"
fasteners = "0.14.1"
pyyaml = "^6.0.1"
mycroft-mimic3-tts = "^0.2.4"
lingua-franca = "0.4.2"
msm = "0.8.9"
msk = "0.3.16"
mycroft-messagebus-client = "0.9.4"
adapt-parser = "0.5.1"
padatious = "0.4.8"
fann2 = "1.0.7"
padaos = "0.1.9"
precise-runner = "0.2.1"
petact = "0.1.2"
pyxdg = "0.27"
openai = "1.3.6"
elevenlabs = "0.2.26"
langchain = "0.0.334"
pymongo = "4.5.0"
onnxruntime = "1.15.1"
pvporcupine = "3.0.0"
ovos-stt-plugin-fasterwhisper = "^0.0.0"

[tool.poetry.scripts]
core-voice-client="core.client.voice.__main__:main"
core-messagebus="core.messagebus.service.__main__:main"  # MESSAGEBUS
core-skills="core.skills.__main__:main"  # SKILLS
core-cli-client="core.client.text.__main__:main"# CORE contact with MB
core-audio="core.audio.__main__:main"  # AUDIO OUTPUT

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
